test/langtools/tools/javac/lambda/8131742/T8131742.out
T8131742.java:8:39: compiler.err.this.as.identifier
T8131742.java:8:32: compiler.err.expected: token.identifier
T8131742.java:16:12: compiler.err.expected: token.identifier
3 errors
